Launch both projects

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,6 +9,18 @@
         "options": {
           "cwd": "${workspaceFolder}/frontend"
         }
+      },
+      {
+        "type": "cargo",
+        "command": "build",
+        "problemMatcher": [
+          "$rustc"
+        ],
+        "group": "build",
+        "label": "rust: cargo build backend", 
+        "options": {
+          "cwd": "${workspaceFolder}/backend"
+        },
       }
     ]
   }
