--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,8 +3,38 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
-        
+    "compounds": [
+        {
+            "name": "Debug frontend/backend",
+            "configurations": ["Launch backend", "vuejs: chrome"], 
+            "presentation": {
+                "hidden": false,
+                "group": "",
+                "order": 1
+            }
+        }
+    ],
+    "configurations": [        
+        {
+            "name": "Launch backend",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/backend/target/debug/thp-backend",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ],
+            "preLaunchTask": "rust: cargo build backend",
+        },
         {
             "type": "pwa-chrome",
             "request": "launch",
