--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,8 @@
         "isBackground": true,
         "options": {
           "cwd": "${workspaceFolder}/frontend"
-        }
+        },
+        "problemMatcher": [],
       },
       {
         "type": "cargo",
@@ -17,10 +18,10 @@
           "$rustc"
         ],
         "group": "build",
-        "label": "rust: cargo build backend", 
+        "label": "rust: cargo build backend",
         "options": {
           "cwd": "${workspaceFolder}/backend"
-        },
+        }
       }
     ]
   }
