--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,27 +1,48 @@
 {
-    "version": "2.0.0",
-    "tasks": [
-      {
-        "label": "vuejs: start",
-        "type": "npm",
-        "script": "serve",
-        "isBackground": true,
-        "options": {
-          "cwd": "${workspaceFolder}/frontend"
-        },
-        "problemMatcher": [],
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "label": "vuejs: serve",
+      "type": "npm",
+      "script": "serve",
+      "isBackground": true,
+      "options": {
+        "cwd": "${workspaceFolder}/frontend"
       },
-      {
-        "type": "cargo",
-        "command": "build",
-        "problemMatcher": [
-          "$rustc"
-        ],
-        "group": "build",
-        "label": "rust: cargo build backend",
-        "options": {
-          "cwd": "${workspaceFolder}/backend"
+      "problemMatcher": {
+        "base": "$tsc-watch",
+        "background": {
+          "activeOnStart": true,
+          "beginsPattern": "Starting development server",
+          "endsPattern": "Compiled successfully"
         }
       }
-    ]
-  }
+    },
+    {
+      "type": "cargo",
+      "command": "build",
+      "problemMatcher": [
+        "$rustc"
+      ],
+      "group": "build",
+      "label": "rust: cargo build backend",
+      "options": {
+        "cwd": "${workspaceFolder}/backend"
+      }
+    },
+    {
+      "label": "Terminate Vue Serve",
+      "command": "echo ${input:terminateVue}",
+      "type": "shell",
+      "problemMatcher": []
+    }
+  ],
+  "inputs": [
+    {
+      "id": "terminateVue",
+      "type": "command",
+      "command": "workbench.action.tasks.terminate",
+      "args": "vuejs: serve"
+    }
+  ]
+}
